language_bindings/Delphi/dtwain64u.pas


{ DTWAIN DLL functional interface }
  function DTWAIN_AcquireBuffered(Source:DTWAIN_SOURCE;PixelType:DWORD;nMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireBuffered';
  function DTWAIN_AcquireBufferedEx(Source:DTWAIN_SOURCE;PixelType:DWORD;nMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;Acquisitions:DTWAIN_ARRAY;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireBufferedEx';
  function DTWAIN_AcquireFile(Source:DTWAIN_SOURCE;lpszFile:LPCWSTR;lFileType:DWORD;lFileFlags:DWORD;PixelType:DWORD;lMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireFile';
  function DTWAIN_AcquireFileA(Source:DTWAIN_SOURCE;lpszFile:PAnsiChar;lFileType:DWORD;lFileFlags:DWORD;PixelType:DWORD;lMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireFileA';
  function DTWAIN_AcquireFileEx(Source:DTWAIN_SOURCE;aFileNames:DTWAIN_ARRAY;lFileType:DWORD;lFileFlags:DWORD;PixelType:DWORD;lMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireFileEx';
  function DTWAIN_AcquireFileW(Source:DTWAIN_SOURCE;lpszFile:PWideChar;lFileType:DWORD;lFileFlags:DWORD;PixelType:DWORD;lMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireFileW';
  function DTWAIN_AcquireNative(Source:DTWAIN_SOURCE;PixelType:DWORD;nMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireNative';
  function DTWAIN_AcquireNativeEx(Source:DTWAIN_SOURCE;PixelType:DWORD;nMaxPages:DWORD;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;Acquisitions:DTWAIN_ARRAY;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireNativeEx';
  function DTWAIN_AcquireToClipboard(Source:DTWAIN_SOURCE;PixelType:DWORD;nMaxPages:DWORD;nTransferMode:DWORD;bDiscardDibs:DTWAIN_BOOL;bShowUI:DTWAIN_BOOL;bCloseSource:DTWAIN_BOOL;pStatus:LPLONG):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AcquireToClipboard';
  function DTWAIN_AddPDFText(Source:DTWAIN_SOURCE;szText:LPCWSTR;xPos:DWORD;yPos:DWORD;fontName:LPCWSTR;fontSize:DTWAIN_FLOAT;colorRGB:DWORD;renderMode:DWORD;scaling:DTWAIN_FLOAT;charSpacing:DTWAIN_FLOAT;wordSpacing:DTWAIN_FLOAT;strokeWidth:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AddPDFText';
  function DTWAIN_AddPDFTextA(Source:DTWAIN_SOURCE;szText:PAnsiChar;xPos:DWORD;yPos:DWORD;fontName:PAnsiChar;fontSize:DTWAIN_FLOAT;colorRGB:DWORD;renderMode:DWORD;scaling:DTWAIN_FLOAT;charSpacing:DTWAIN_FLOAT;wordSpacing:DTWAIN_FLOAT;strokeWidth:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AddPDFTextA';
  function DTWAIN_AddPDFTextW(Source:DTWAIN_SOURCE;szText:PWideChar;xPos:DWORD;yPos:DWORD;fontName:PWideChar;fontSize:DTWAIN_FLOAT;colorRGB:DWORD;renderMode:DWORD;scaling:DTWAIN_FLOAT;charSpacing:DTWAIN_FLOAT;wordSpacing:DTWAIN_FLOAT;strokeWidth:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AddPDFTextW';
  function DTWAIN_AppHandlesExceptions(bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_AppHandlesExceptions';
  function DTWAIN_ArrayAdd(pArray:DTWAIN_ARRAY;pVariant:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAdd';
  function DTWAIN_ArrayAddANSIString(pArray:DTWAIN_ARRAY;Val:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddANSIString';
  function DTWAIN_ArrayAddANSIStringN(pArray:DTWAIN_ARRAY;Val:PAnsiChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddANSIStringN';
  function DTWAIN_ArrayAddFloat(pArray:DTWAIN_ARRAY;Val:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddFloat';
  function DTWAIN_ArrayAddFloatN(pArray:DTWAIN_ARRAY;Val:DTWAIN_FLOAT;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddFloatN';
  function DTWAIN_ArrayAddLong(pArray:DTWAIN_ARRAY;Val:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddLong';
  function DTWAIN_ArrayAddLong64(pArray:DTWAIN_ARRAY;Val:Int64):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddLong64';
  function DTWAIN_ArrayAddLong64N(pArray:DTWAIN_ARRAY;Val:Int64;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddLong64N';
  function DTWAIN_ArrayAddLongN(pArray:DTWAIN_ARRAY;Val:DWORD;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddLongN';
  function DTWAIN_ArrayAddN(pArray:DTWAIN_ARRAY;pVariant:LPVOID;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddN';
  function DTWAIN_ArrayAddString(pArray:DTWAIN_ARRAY;Val:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddString';
  function DTWAIN_ArrayAddStringA(pArray:DTWAIN_ARRAY;Val:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddStringA';
  function DTWAIN_ArrayAddStringN(pArray:DTWAIN_ARRAY;Val:LPCWSTR;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddStringN';
  function DTWAIN_ArrayAddStringNA(pArray:DTWAIN_ARRAY;Val:PAnsiChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddStringNA';
  function DTWAIN_ArrayAddStringNW(pArray:DTWAIN_ARRAY;Val:PWideChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddStringNW';
  function DTWAIN_ArrayAddStringW(pArray:DTWAIN_ARRAY;Val:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddStringW';
  function DTWAIN_ArrayAddWideString(pArray:DTWAIN_ARRAY;Val:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddWideString';
  function DTWAIN_ArrayAddWideStringN(pArray:DTWAIN_ARRAY;Val:PWideChar;num:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayAddWideStringN';
  function DTWAIN_ArrayConvertFix32ToFloat(Fix32Array:DTWAIN_ARRAY):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayConvertFix32ToFloat';
  function DTWAIN_ArrayConvertFloatToFix32(FloatArray:DTWAIN_ARRAY):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayConvertFloatToFix32';
  function DTWAIN_ArrayCopy(Source:DTWAIN_ARRAY;Dest:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCopy';
  function DTWAIN_ArrayCreate(nEnumType:DWORD;nInitialSize:DWORD):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCreate';
  function DTWAIN_ArrayCreateCopy(Source:DTWAIN_ARRAY):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCreateCopy';
  function DTWAIN_ArrayCreateFromCap(Source:DTWAIN_SOURCE;lCapType:DWORD;lSize:DWORD):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCreateFromCap';
  function DTWAIN_ArrayCreateFromLongs(pCArray:LPLONG;nSize:DWORD):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCreateFromLongs';
  function DTWAIN_ArrayCreateFromReals(var pCArray:DTWAIN_FLOAT;nSize:DWORD):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCreateFromReals';
  function DTWAIN_ArrayCreateFromStrings(var pCArray:PAnsiChar;nSize:DWORD):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayCreateFromStrings';
  function DTWAIN_ArrayDestroy(pArray:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayDestroy';
  function DTWAIN_ArrayDestroyFrames(FrameArray:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayDestroyFrames';
  function DTWAIN_ArrayFind(pArray:DTWAIN_ARRAY;pVariant:LPVOID):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFind';
  function DTWAIN_ArrayFindANSIString(pArray:DTWAIN_ARRAY;pString:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindANSIString';
  function DTWAIN_ArrayFindFloat(pArray:DTWAIN_ARRAY;Val:DTWAIN_FLOAT;Tolerance:DTWAIN_FLOAT):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindFloat';
  function DTWAIN_ArrayFindLong(pArray:DTWAIN_ARRAY;Val:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindLong';
  function DTWAIN_ArrayFindLong64(pArray:DTWAIN_ARRAY;Val:Int64):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindLong64';
  function DTWAIN_ArrayFindString(pArray:DTWAIN_ARRAY;pString:LPCWSTR):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindString';
  function DTWAIN_ArrayFindStringA(pArray:DTWAIN_ARRAY;pString:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindStringA';
  function DTWAIN_ArrayFindStringW(pArray:DTWAIN_ARRAY;pString:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindStringW';
  function DTWAIN_ArrayFindWideString(pArray:DTWAIN_ARRAY;pString:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFindWideString';
  function DTWAIN_ArrayFix32GetAt(aFix32:DTWAIN_ARRAY;lPos:DWORD;Whole:LPLONG;Frac:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFix32GetAt';
  function DTWAIN_ArrayFix32SetAt(aFix32:DTWAIN_ARRAY;lPos:DWORD;Whole:DWORD;Frac:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFix32SetAt';
  function DTWAIN_ArrayFrameGetFrameAt(FrameArray:DTWAIN_ARRAY;nWhere:DWORD):DTWAIN_FRAME;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayFrameGetFrameAt';
  function DTWAIN_ArrayGetAt(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVariant:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAt';
  function DTWAIN_ArrayGetAtANSIString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtANSIString';
  function DTWAIN_ArrayGetAtFloat(pArray:DTWAIN_ARRAY;nWhere:DWORD;var pVal:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtFloat';
  function DTWAIN_ArrayGetAtLong(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtLong';
  function DTWAIN_ArrayGetAtLong64(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVal:LPLONG64):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtLong64';
  function DTWAIN_ArrayGetAtString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtString';
  function DTWAIN_ArrayGetAtStringA(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtStringA';
  function DTWAIN_ArrayGetAtStringW(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtStringW';
  function DTWAIN_ArrayGetAtWideString(pArray:DTWAIN_ARRAY;nWhere:DWORD;pStr:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetAtWideString';
  function DTWAIN_ArrayGetBuffer(pArray:DTWAIN_ARRAY;nPos:DWORD):LPVOID;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetBuffer';
  function DTWAIN_ArrayGetCount(pArray:DTWAIN_ARRAY):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetCount';
  function DTWAIN_ArrayGetMaxStringLength(a:DTWAIN_ARRAY):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetMaxStringLength';
  function DTWAIN_ArrayGetStringLength(a:DTWAIN_ARRAY;nWhichString:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetStringLength';
  function DTWAIN_ArrayGetType(pArray:DTWAIN_ARRAY):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayGetType';
  function DTWAIN_ArrayInsertAt(pArray:DTWAIN_ARRAY;nWhere:DWORD;pVariant:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ArrayInsertAt';
